[gd_scene load_steps=5 format=3 uid="uid://7ur344am626x"]

[ext_resource type="Script" path="res://environment/handtracked_pose_capture_area.gd" id="1_4wdbl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rgfbu"]
albedo_color = Color(1, 1, 1, 0.196078)

[sub_resource type="BoxMesh" id="BoxMesh_kxscl"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_xsxpl"]
size = Vector3(0.25, 0.25, 0.25)

[node name="HandtrackedPoseCaptureArea" type="Area3D"]
collision_layer = 0
collision_mask = 65536
monitorable = false
script = ExtResource("1_4wdbl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_rgfbu")
mesh = SubResource("BoxMesh_kxscl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_xsxpl")

[node name="PoseName" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.271688, 0)
pixel_size = 0.002
text = "HandtrackedPoseCaptureArea"

[node name="TimeLeft" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.190749, 0)
pixel_size = 0.002
text = "0"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
